2007-11-19  chryjs  <chryjs!@!free!.!fr>

 * Suppression de modeles obsoletes 
 * Ajout d'un controle des prerequis a l'activation
 * passage en 0.3.1 - meilleurs controles
 * Filtrage (conditions d'acces et menus) des affichages exec=...
 * Correction bug meta spipbb_id_rubrique -> id_secteur
 * Correction d'un gros bug dans les inclusions (menus admins) qui plantait spip en 192 (certaines versions)...
 * passage en 0.3.2 - plantage corrige

2007-11-18  chryjs  <chryjs!@!free!.!fr>

 * Integration Gafospip, balises, fonctions et mise en page
 * passage en 0.3.0 - coherence avec gafospip

2007-11-14  chryjs  <chryjs!@!free!.!fr>

 * Premiere adaptation en vue d'un rapprochement avec Gafospip
 * Reecriture du processus d'installation : tout est maintenant optionnel
 * Chaque element des menus est propose sous condition
 * Les traitements, balises sont aussi soumis a condition


2007-11-12  chryjs  <chryjs!@!free!.!fr>

 * spipbb_pipelines : appel a inc/spipbb pour la compatibilite necessaire 192 a cause de sql_fetsel bug report X. Burot (email)
 * fromphpbb : ajout de la recherche en local de la config + controles + un peu de traduction + utlisation d'un fond
 * passage en 0.2.7

2007-11-11  chryjs  <chryjs!@!free!.!fr>

 * L'utilisation de CFG n'est plus obligatoire
 * Ajout de l'affichage de la log du spam + corrections cosmetiques
 * Controle de l'insertion de mot de spam (pas de doublons)
 * Supprimer n'est pas bienvenue dans la gestion des categories et forums
 * forum_insert : ajout filtre mots clés retenus lors de l'enreg (passage en gras spip {{ }} )
 * Ajout ban list et filtrage à l'inscription

2007-11-11  chryjs  <chryjs!@!free!.!fr>

 * inc/spipbb_192 oubli de parenthèses, bug : http://www.spip-contrib.net/Plugin-SpipBB#forum400092
 * correction erreur ORDER BY doit etre un array (surtout en 192)
 * meilleure presentation de menu admin