@@ -1,11 +1,11 @@
 <?php
-
 #---------------------------------------------------------------#
 #  Plugin  : spipbb - Licence : GPL                             #
 #  File    : exec/spipbb_admin_anti_spam_forum                  #
+#  Authors : Chryjs, 2007 et als                                #
+#  http://www.spip-contrib.net/Plugin-SpipBB#contributeurs      #
 #  Contact : chryjs!@!free!.!fr                                 #
 #---------------------------------------------------------------#
-
 //    This program is free software; you can redistribute it and/or modify
 //    it under the terms of the GNU General Public License as published by
 //    the Free Software Foundation; either version 2 of the License, or any later version.
@@ -25,16 +25,19 @@
 if (!defined("_ECRIRE_INC_VERSION")) return;
 spip_log(__FILE__.' : included','spipbb');
 
-include_spip('inc/spipbb');
-
 if ( !empty($setmodules) )
 {
-	if ( spipbb_is_configured() and $GLOBALS['spipbb']['configure']=='oui'  and $GLOBALS['spipbb']['config_spam_words']=='oui') {
+	if ( spipbb_is_configured() 
+		 and $GLOBALS['spipbb']['configure']=='oui' 
+		 and $GLOBALS['spipbb']['config_spam_words']=='oui') {
 		$file = basename(__FILE__);
 		$modules['spam']['swforum'] = $file;
 	}
 	return;
 }
+if (defined("_SPAM_SWFORUM")) return; else define("_SPAM_SWFORUM", true);
+
+include_spip('inc/spipbb');
 
 // ------------------------------------------------------------------------------
 // [fr] Methode exec
