@@ -7,7 +7,7 @@
 _ &#169; 2006 - Distribu&eacute; sous licence GPL
 	</auteur>
 	<version>
-		0.3.2
+		0.3.3
 	</version>
 	<etat>
 		experimental
