@@ -1,3 +1,8 @@
+2007-11-20  chryjs  <chryjs!@!free!.!fr>
+
+ * Recherche et correction bug interface privee
+
+
 2007-11-19  chryjs  <chryjs!@!free!.!fr>
 
  * Suppression de modeles obsoletes 
